Feat: Desktop Layout

--- a/src/index.html
+++ b/src/index.html
@@ -26,14 +26,66 @@
   <body>
     <header class="header flex items-center">
       <img src="./assets/images/logo.svg" alt="logo" />
-      <nav class="navigation flex items-center">
-        <ul class="flex items-center">
-          <li>Features</li>
-          <li>Company</li>
-          <li>Careers</li>
-          <li>About</li>
+      <nav class="navigation">
+        <ul class="flex">
+          <li>
+            <button class="expand-btn">
+              Features
+              <img src="./assets/images/icon-arrow-down.svg" alt="" />
+              <img src="./assets/images/icon-arrow-up.svg" alt="" />
+            </button>
+            <ul class="submenu">
+              <li>
+                <a href="#"
+                  ><img src="./assets/images/icon-todo.svg" alt="" />Todo
+                  List</a
+                >
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="./assets/images/icon-calendar.svg"
+                    alt=""
+                  />Calendar</a
+                >
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="./assets/images/icon-reminders.svg"
+                    alt=""
+                  />Reminders</a
+                >
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="./assets/images/icon-planning.svg"
+                    alt=""
+                  />Planning</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li>
+            <button class="expand-btn">
+              Company
+              <img src="./assets/images/icon-arrow-down.svg" alt="" />
+              <img src="./assets/images/icon-arrow-up.svg" alt="" />
+            </button>
+            <ul class="submenu">
+              <li><a href="#">History</a></li>
+              <li><a href="#">Our Team</a></li>
+              <li><a href="#">Blog</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">About</a></li>
         </ul>
-        <div class="auth-links">Login Register</div>
+        <div class="auth-links">
+          <a href="#">Login</a>
+          <a href="#" class="btn btn--outline">Register</a>
+        </div>
       </nav>
       <button class="mobile-menu-toggler flex items-center justify-center">
         <img src="./assets/images/icon-menu.svg" alt="Open Mobile Menu" />
@@ -51,21 +103,47 @@
             <li>
               <button class="expand-btn">
                 Features
-                <img src="./assets/images/icon-arrow-down.svg" alt="">
-                <img src="./assets/images/icon-arrow-up.svg" alt="">
+                <img src="./assets/images/icon-arrow-down.svg" alt="" />
+                <img src="./assets/images/icon-arrow-up.svg" alt="" />
               </button>
               <ul class="submenu">
-                <li><a href="#"><img src="./assets/images/icon-todo.svg" alt="">Todo List</a></li>
-                <li><a href="#"><img src="./assets/images/icon-calendar.svg" alt="">Calendar</a></li>
-                <li><a href="#"><img src="./assets/images/icon-reminders.svg" alt="">Reminders</a></li>
-                <li><a href="#"><img src="./assets/images/icon-planning.svg" alt="">Planning</a></li>
+                <li>
+                  <a href="#"
+                    ><img src="./assets/images/icon-todo.svg" alt="" />Todo
+                    List</a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="./assets/images/icon-calendar.svg"
+                      alt=""
+                    />Calendar</a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="./assets/images/icon-reminders.svg"
+                      alt=""
+                    />Reminders</a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="./assets/images/icon-planning.svg"
+                      alt=""
+                    />Planning</a
+                  >
+                </li>
               </ul>
             </li>
             <li>
               <button class="expand-btn">
                 Company
-                <img src="./assets/images/icon-arrow-down.svg" alt="">
-                <img src="./assets/images/icon-arrow-up.svg" alt="">
+                <img src="./assets/images/icon-arrow-down.svg" alt="" />
+                <img src="./assets/images/icon-arrow-up.svg" alt="" />
               </button>
               <ul class="submenu">
                 <li><a href="#">History</a></li>
