--- a/src/index.html
+++ b/src/index.html
@@ -200,7 +200,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="https://github.com/kevinndlc">kevinndlc</a>.
     </footer>
   </body>
 </html>
